syntax = "proto3";

package message;
option go_package = "ranking/proto";


service Rank {
  rpc ZAdd (ZAddReq) returns (ZAddResp){}
  rpc ZRem (ZRemReq) returns (ZRemResp){}

}

message Container{
  map<string,uint64>data = 1;
}

message RDB {
  uint64 version = 2;
  uint64 timestamp = 3;
  map<string,Container> containers = 4;
}

message ZAddReq{
  string key = 1;
  map<string,uint64>val = 2;
}

message ZAddResp{
  uint64 addC = 1;
  uint64 updateC = 2;
}

message ZRemReq{
  string key = 1;
  string val = 2;
}

message ZRemResp{
  int32 count = 1;
}



enum method {
  ZADD = 0;
  ZREM = 1;
}


